# inertia-ssr-test

./: .gitignore  Cargo.toml  readme.md
inertia/: Cargo.toml
inertia/src/: lib.rs
nodejs-server/: README.md  package-lock.json  package.json  vite.config.js  vite.ssr.config.js
nodejs-server/www/: app.tsx  ssr.tsx
nodejs-server/www/pages/: Index.tsx
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
supervisor/: Cargo.toml
supervisor/src/: lib.rs
