[package]
name = "test_hyper_client"
description = "testing hyper rs for client requests"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "inertia"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
async-trait = "0.1.82"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
inertia = { path = "inertia" }
serde.workspace = true
serde_json.workspace = true