[package]
name = "test_inertia_ssr_reqs"
description = "testing hyper rs for client requests"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["inertia"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[dependencies]
async-trait = "0.1.82"
tokio = { version = "1.40", features = ["full"] }
inertia = { path = "inertia" }
supervisor = { path = "supervisor" }
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true